--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Perkenalan Diri</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        p {
+            line-height: 1.6;
+            color: #666;
+        }
+        .profile-image {
+            display: block;
+            margin: 20px auto;
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is my first GitHub Pages website.</p>
+    <div class="container">
+        <h1>Halo, Saya [Nama Kamu]</h1>
+        <img src="https://via.placeholder.com/150" alt="Foto Profil" class="profile-image">
+        <p>Nama saya <strong>[Nama Kamu]</strong>. Saya saat ini tinggal di <strong>[Kota Kamu]</strong> dan memiliki minat dalam <strong>[hobi atau ketertarikan kamu]</strong>.</p>
+        <p>Saat ini, saya sedang belajar <strong>[bidang yang dipelajari, misal: pemrograman atau desain]</strong> dan senang mengeksplorasi hal-hal baru.</p>
+        <p>Jika ingin berkenalan lebih jauh atau bekerja sama dalam proyek menarik, jangan ragu untuk menghubungi saya!</p>
+    </div>
 </body>
 </html>
