--- a/index.html
+++ b/index.html
@@ -3,48 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perkenalan Diri</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 600px;
-            margin: 50px auto;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-        p {
-            line-height: 1.6;
-            color: #666;
-        }
-        .profile-image {
-            display: block;
-            margin: 20px auto;
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <title>Website Saya</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>Halo, Saya [Nama Kamu]</h1>
-        <img src="https://via.placeholder.com/150" alt="Foto Profil" class="profile-image">
-        <p>Nama saya <strong>[Nama Kamu]</strong>. Saya saat ini tinggal di <strong>[Kota Kamu]</strong> dan memiliki minat dalam <strong>[hobi atau ketertarikan kamu]</strong>.</p>
-        <p>Saat ini, saya sedang belajar <strong>[bidang yang dipelajari, misal: pemrograman atau desain]</strong> dan senang mengeksplorasi hal-hal baru.</p>
-        <p>Jika ingin berkenalan lebih jauh atau bekerja sama dalam proyek menarik, jangan ragu untuk menghubungi saya!</p>
-    </div>
+        <nav>
+            <ul>
+                <li><a href="#about">Tentang Saya</a></li>
+                <li><a href="#projects">Proyek</a></li>
+                <li><a href="#contact">Kontak</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about" class="content">
+        <h2>Tentang Saya</h2>
+        <p>Nama saya <strong>[Nama Kamu]</strong>. Saya tinggal di <strong>[Kota Kamu]</strong> dan sangat menyukai <strong>[hobi atau minat kamu]</strong>. Saya senang belajar hal-hal baru dan saat ini fokus di bidang <strong>[bidang yang kamu pelajari]</strong>.</p>
+    </section>
+
+    <section id="projects" class="content">
+        <h2>Proyek Saya</h2>
+        <ul>
+            <li><a href="#">Proyek 1: Website Portofolio</a></li>
+            <li><a href="#">Proyek 2: Aplikasi Todo List</a></li>
+            <li><a href="#">Proyek 3: Blog Pribadi</a></li>
+        </ul>
+    </section>
+
+    <footer id="contact">
+        <h2>Kontak</h2>
+        <p>Hubungi saya di: <a href="mailto:kamu@email.com">kamu@email.com</a></p>
+        <p>&copy; 2024 [Nama Kamu]. Semua hak dilindungi.</p>
+    </footer>
 </body>
 </html>
