--- a/index.html
+++ b/index.html
@@ -3,39 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Saya</title>
+    <title>Perkenalan Diri</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Halo, Saya [Nama Kamu]</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">Tentang Saya</a></li>
-                <li><a href="#projects">Proyek</a></li>
-                <li><a href="#contact">Kontak</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="about" class="content">
-        <h2>Tentang Saya</h2>
-        <p>Nama saya <strong>[Nama Kamu]</strong>. Saya tinggal di <strong>[Kota Kamu]</strong> dan sangat menyukai <strong>[hobi atau minat kamu]</strong>. Saya senang belajar hal-hal baru dan saat ini fokus di bidang <strong>[bidang yang kamu pelajari]</strong>.</p>
-    </section>
-
-    <section id="projects" class="content">
-        <h2>Proyek Saya</h2>
-        <ul>
-            <li><a href="#">Proyek 1: Website Portofolio</a></li>
-            <li><a href="#">Proyek 2: Aplikasi Todo List</a></li>
-            <li><a href="#">Proyek 3: Blog Pribadi</a></li>
-        </ul>
-    </section>
-
-    <footer id="contact">
-        <h2>Kontak</h2>
-        <p>Hubungi saya di: <a href="mailto:kamu@email.com">kamu@email.com</a></p>
-        <p>&copy; 2024 [Nama Kamu]. Semua hak dilindungi.</p>
-    </footer>
+    <div class="container">
+        <div class="card">
+            <img src="profil.jpg" alt="Foto Profil" class="profile-img">
+            <h1>Nama Saya</h1>
+            <p class="description">
+                Halo! Saya seorang siswa dengan minat di bidang teknologi dan desain. Saya senang mempelajari hal baru dan 
+                berbagi ilmu dengan orang lain. Mari terhubung dan bertumbuh bersama!
+            </p>
+            <div class="social-links">
+                <a href="https://www.instagram.com" target="_blank">Instagram</a>
+                <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+                <a href="https://github.com" target="_blank">GitHub</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
