--- a/index.html
+++ b/index.html
@@ -3,22 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perkenalan Diri</title>
+    <title>Perkenalan dan Proyek Wokwi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="card">
-            <img src="profil.jpg" alt="Foto Profil" class="profile-img">
+            <img src="profile.jpg" alt="Foto Profil" class="profile-img">
             <h1>Nama Saya</h1>
             <p class="description">
-                Halo! Saya seorang siswa dengan minat di bidang teknologi dan desain. Saya senang mempelajari hal baru dan 
-                berbagi ilmu dengan orang lain. Mari terhubung dan bertumbuh bersama!
+                Halo! Saya memiliki minat di bidang teknologi dan telah mengerjakan beberapa proyek elektronik menggunakan Wokwi.
             </p>
-            <div class="social-links">
-                <a href="https://www.instagram.com" target="_blank">Instagram</a>
-                <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
-                <a href="https://github.com" target="_blank">GitHub</a>
+
+            <h2>Proyek Wokwi Saya</h2>
+            <div class="project-list">
+                <div class="project-item">
+                    <h3>Proyek 1: LED Blinking</h3>
+                    <p>Proyek sederhana yang menyalakan dan mematikan LED secara berkala.</p>
+                    <a href="https://wokwi.com/projects/123456" target="_blank" class="project-btn">Lihat Proyek</a>
+                </div>
+
+                <div class="project-item">
+                    <h3>Proyek 2: Sensor Suhu</h3>
+                    <p>Proyek ini menampilkan data suhu menggunakan sensor DHT22.</p>
+                    <a href="https://wokwi.com/projects/654321" target="_blank" class="project-btn">Lihat Proyek</a>
+                </div>
+
+                <div class="project-item">
+                    <h3>Proyek 3: Kontrol Servo</h3>
+                    <p>Menggerakkan servo berdasarkan input dari potensiometer.</p>
+                    <a href="https://wokwi.com/projects/789123" target="_blank" class="project-btn">Lihat Proyek</a>
+                </div>
             </div>
         </div>
     </div>
