--- a/index.html
+++ b/index.html
@@ -3,38 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perkenalan dan Proyek Wokwi</title>
+    <title>Perkenalan dan Proyek</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="card">
-            <img src="profile.jpg" alt="Foto Profil" class="profile-img">
+            <img src="profil.jpg" alt="Foto Profil" class="profile-img">
             <h1>Nama Saya</h1>
             <p class="description">
-                Halo! Saya memiliki minat di bidang teknologi dan telah mengerjakan beberapa proyek elektronik menggunakan Wokwi.
+                Halo! Saya senang bekerja dengan teknologi dan telah mengerjakan beberapa proyek menarik. Berikut adalah daftar proyek saya di GitHub dan Wokwi.
             </p>
 
-            <h2>Proyek Wokwi Saya</h2>
-            <div class="project-list">
-                <div class="project-item">
+            <h2>Proyek Saya</h2>
+            <ul class="project-list">
+                <li class="project-item">
                     <h3>Proyek 1: LED Blinking</h3>
-                    <p>Proyek sederhana yang menyalakan dan mematikan LED secara berkala.</p>
-                    <a href="https://wokwi.com/projects/123456" target="_blank" class="project-btn">Lihat Proyek</a>
-                </div>
+                    <a href="https://github.com/username/led-blinking" target="_blank">GitHub</a> |
+                    <a href="https://wokwi.com/projects/123456" target="_blank">Wokwi</a>
+                </li>
 
-                <div class="project-item">
+                <li class="project-item">
                     <h3>Proyek 2: Sensor Suhu</h3>
-                    <p>Proyek ini menampilkan data suhu menggunakan sensor DHT22.</p>
-                    <a href="https://wokwi.com/projects/654321" target="_blank" class="project-btn">Lihat Proyek</a>
-                </div>
+                    <a href="https://github.com/username/sensor-suhu" target="_blank">GitHub</a> |
+                    <a href="https://wokwi.com/projects/654321" target="_blank">Wokwi</a>
+                </li>
 
-                <div class="project-item">
+                <li class="project-item">
                     <h3>Proyek 3: Kontrol Servo</h3>
-                    <p>Menggerakkan servo berdasarkan input dari potensiometer.</p>
-                    <a href="https://wokwi.com/projects/789123" target="_blank" class="project-btn">Lihat Proyek</a>
-                </div>
-            </div>
+                    <a href="https://github.com/username/kontrol-servo" target="_blank">GitHub</a> |
+                    <a href="https://wokwi.com/projects/789123" target="_blank">Wokwi</a>
+                </li>
+            </ul>
         </div>
     </div>
 </body>
