--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perkenalan dan Proyek</title>
+    <title>Daftar Proyek Wokwi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,29 +12,28 @@
             <img src="profile.jpg" alt="Foto Profil" class="profile-img">
             <h1>Nama Saya</h1>
             <p class="description">
-                Halo! Saya senang bekerja dengan teknologi dan telah mengerjakan beberapa proyek menarik. Berikut adalah daftar proyek saya di GitHub dan Wokwi.
+                Berikut adalah beberapa proyek saya yang telah diunggah di Wokwi dan GitHub:
             </p>
 
-            <h2>Proyek Saya</h2>
-            <ul class="project-list">
-                <li class="project-item">
-                    <h3>Proyek 1: LED Blinking</h3>
-                    <a href="https://github.com/username/led-blinking" target="_blank">GitHub</a> |
-                    <a href="https://wokwi.com/projects/123456" target="_blank">Wokwi</a>
-                </li>
+            <div class="scroll-list">
+                <div class="project-item">
+                    <span class="project-title">Proyek 1: LED Blinking</span>
+                    <a href="https://github.com/user/repo1" target="_blank" class="btn github-btn">GitHub</a>
+                    <a href="https://wokwi.com/projects/123456" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                </div>
 
-                <li class="project-item">
-                    <h3>Proyek 2: Sensor Suhu</h3>
-                    <a href="https://github.com/username/sensor-suhu" target="_blank">GitHub</a> |
-                    <a href="https://wokwi.com/projects/654321" target="_blank">Wokwi</a>
-                </li>
+                <div class="project-item">
+                    <span class="project-title">Proyek 2: Sensor Suhu</span>
+                    <a href="https://github.com/user/repo2" target="_blank" class="btn github-btn">GitHub</a>
+                    <a href="https://wokwi.com/projects/654321" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                </div>
 
-                <li class="project-item">
-                    <h3>Proyek 3: Kontrol Servo</h3>
-                    <a href="https://github.com/username/kontrol-servo" target="_blank">GitHub</a> |
-                    <a href="https://wokwi.com/projects/789123" target="_blank">Wokwi</a>
-                </li>
-            </ul>
+                <div class="project-item">
+                    <span class="project-title">Proyek 3: Kontrol Servo</span>
+                    <a href="https://github.com/user/repo3" target="_blank" class="btn github-btn">GitHub</a>
+                    <a href="https://wokwi.com/projects/789123" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
