--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <img src="profile.jpg" alt="Foto Profil" class="profile-img">
+            <img src="profil.jpg" alt="Foto Profil" class="profile-img">
             <h1>Nama Saya</h1>
             <p class="description">
                 Berikut adalah beberapa proyek saya yang telah diunggah di Wokwi dan GitHub:
@@ -32,6 +32,18 @@
                     <span class="project-title">Proyek 3: Kontrol Servo</span>
                     <a href="https://github.com/user/repo3" target="_blank" class="btn github-btn">GitHub</a>
                     <a href="https://wokwi.com/projects/789123" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                </div>
+
+                <div class="project-item">
+                    <span class="project-title">Proyek 4: Sensor Cahaya</span>
+                    <a href="https://github.com/user/repo4" target="_blank" class="btn github-btn">GitHub</a>
+                    <a href="https://wokwi.com/projects/456789" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                </div>
+
+                <div class="project-item">
+                    <span class="project-title">Proyek 5: Alarm Pintu</span>
+                    <a href="https://github.com/user/repo5" target="_blank" class="btn github-btn">GitHub</a>
+                    <a href="https://wokwi.com/projects/987654" target="_blank" class="btn wokwi-btn">Wokwi</a>
                 </div>
             </div>
         </div>
