--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <img src="profil.jpg" alt="Foto Profil" class="profile-img">
+            <img src="profile.jpg" alt="Foto Profil" class="profile-img">
             <h1>Nama Saya</h1>
             <p class="description">
                 Berikut adalah beberapa proyek saya yang telah diunggah di Wokwi dan GitHub:
