--- a/index.html
+++ b/index.html
@@ -16,35 +16,49 @@
             </p>
 
             <div class="scroll-list">
+                <!-- Tambahkan 10 proyek -->
                 <div class="project-item">
                     <span class="project-title">Proyek 1: LED Blinking</span>
-                    <a href="https://github.com/user/repo1" target="_blank" class="btn github-btn">GitHub</a>
-                    <a href="https://wokwi.com/projects/123456" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    <div class="link-group">
+                        <a href="https://github.com/user/repo1" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="https://wokwi.com/projects/123456" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    </div>
                 </div>
 
                 <div class="project-item">
                     <span class="project-title">Proyek 2: Sensor Suhu</span>
-                    <a href="https://github.com/user/repo2" target="_blank" class="btn github-btn">GitHub</a>
-                    <a href="https://wokwi.com/projects/654321" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    <div class="link-group">
+                        <a href="https://github.com/user/repo2" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="https://wokwi.com/projects/654321" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    </div>
                 </div>
 
                 <div class="project-item">
                     <span class="project-title">Proyek 3: Kontrol Servo</span>
-                    <a href="https://github.com/user/repo3" target="_blank" class="btn github-btn">GitHub</a>
-                    <a href="https://wokwi.com/projects/789123" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    <div class="link-group">
+                        <a href="https://github.com/user/repo3" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="https://wokwi.com/projects/789123" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    </div>
                 </div>
 
+                <!-- Tambah hingga 10 proyek -->
                 <div class="project-item">
                     <span class="project-title">Proyek 4: Sensor Cahaya</span>
-                    <a href="https://github.com/user/repo4" target="_blank" class="btn github-btn">GitHub</a>
-                    <a href="https://wokwi.com/projects/456789" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    <div class="link-group">
+                        <a href="https://github.com/user/repo4" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="https://wokwi.com/projects/456789" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    </div>
                 </div>
 
                 <div class="project-item">
                     <span class="project-title">Proyek 5: Alarm Pintu</span>
-                    <a href="https://github.com/user/repo5" target="_blank" class="btn github-btn">GitHub</a>
-                    <a href="https://wokwi.com/projects/987654" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    <div class="link-group">
+                        <a href="https://github.com/user/repo5" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="https://wokwi.com/projects/987654" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    </div>
                 </div>
+
+                <!-- Tambahkan proyek lainnya sesuai kebutuhan -->
             </div>
         </div>
     </div>
