--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <img src="profile.jpg" alt="Foto Profil" class="profile-img">
+            <img src="data/profile.jpg" alt="Foto Profil" class="profile-img">
             <h1>Nama Saya</h1>
             <p class="description">
                 Berikut adalah beberapa proyek saya yang telah diunggah di Wokwi dan GitHub:
@@ -20,24 +20,24 @@
                 <div class="project-item">
                     <span class="project-title">Proyek 1: LED Blinking</span>
                     <div class="link-group">
-                        <a href="https://github.com/user/repo1" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/123456" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="data/not_found.html" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
 
                 <div class="project-item">
                     <span class="project-title">Proyek 2: Sensor Suhu</span>
                     <div class="link-group">
-                        <a href="https://github.com/user/repo2" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/654321" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="data/not_found.html" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
 
                 <div class="project-item">
                     <span class="project-title">Proyek 3: Kontrol Servo</span>
                     <div class="link-group">
-                        <a href="https://github.com/user/repo3" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/789123" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="data/not_found.html" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
 
@@ -45,16 +45,16 @@
                 <div class="project-item">
                     <span class="project-title">Proyek 4: Sensor Cahaya</span>
                     <div class="link-group">
-                        <a href="https://github.com/user/repo4" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/456789" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="data/not_found.html" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
 
                 <div class="project-item">
                     <span class="project-title">Proyek 5: Alarm Pintu</span>
                     <div class="link-group">
-                        <a href="https://github.com/user/repo5" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/987654" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="data/not_found.html" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
 
