--- a/data/not_found.html
+++ b/data/not_found.html
@@ -64,7 +64,7 @@
     <div class="container">
         <h1>Error 404</h1>
         <p>Halaman yang Anda cari tidak ditemukan.</p>
-        <a href="/" class="btn">Kembali ke Beranda</a>
+        <a href="https://araw10.github.io/About-Me/" class="btn">Kembali ke Beranda</a>
     </div>
 </body>
 </html>
