--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daftar Proyek Wokwi</title>
+    <title>Arduino Project List</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="card">
             <img src="data/profile.jpg" alt="Foto Profil" class="profile-img">
-            <h1>Nama Saya</h1>
+            <h1>ARaW</h1>
             <p class="description">
-                Berikut adalah beberapa proyek saya yang telah diunggah di Wokwi dan GitHub:
+                This is my several project that i've uploaded into Github and Wokwi
             </p>
 
             <div class="scroll-list">
