--- a/index.html
+++ b/index.html
@@ -18,43 +18,58 @@
             <div class="scroll-list">
                 <!-- Tambahkan 10 proyek -->
                 <div class="project-item">
-                    <span class="project-title">Proyek 1: LED Blinking</span>
+                    <span class="project-title">Temp & Humi Project</span>
                     <div class="link-group">
                         <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="data/not_found.html" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        <a href="https://wokwi.com/projects/411239222831525889" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
 
                 <div class="project-item">
-                    <span class="project-title">Proyek 2: Sensor Suhu</span>
+                    <span class="project-title">Buzzerwire Game Project</span>
                     <div class="link-group">
                         <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="data/not_found.html" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        <a href="https://wokwi.com/projects/411061259688619009" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
 
                 <div class="project-item">
-                    <span class="project-title">Proyek 3: Kontrol Servo</span>
+                    <span class="project-title">Automatic Road Lamp Project</span>
                     <div class="link-group">
                         <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="data/not_found.html" target="_blank" class="btn wokwi-btn">Wokwi</a>
-                    </div>
-                </div>
-
-                <!-- Tambah hingga 10 proyek -->
-                <div class="project-item">
-                    <span class="project-title">Proyek 4: Sensor Cahaya</span>
-                    <div class="link-group">
-                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="data/not_found.html" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        <a href="https://wokwi.com/projects/410686824811440129" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
 
                 <div class="project-item">
-                    <span class="project-title">Proyek 5: Alarm Pintu</span>
+                    <span class="project-title">True/False Logic Project</span>
+                    <div class="link-group">
+                        <a href="https://github.com/ARaW10/True-False_Logic" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="https://wokwi.com/projects/409819772556044289" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    </div>
+                </div>
+
+               <div class="project-item">
+                    <span class="project-title">Smart Parking System Project</span>
                     <div class="link-group">
                         <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="data/not_found.html" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        <a href="https://wokwi.com/projects/409335669136293889" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    </div>
+                </div>
+                
+                <div class="project-item">
+                    <span class="project-title">Midterm Test Project</span>
+                    <div class="link-group">
+                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="https://wokwi.com/projects/408790773279297537" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <span class="project-title">PAPI Light Project</span>
+                    <div class="link-group">
+                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="https://wokwi.com/projects/408613596097015809" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
 
