--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                 <div class="project-item">
                     <span class="project-title">Temp & Humi Project</span>
                     <div class="link-group">
-                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/411239222831525889" class="btn wokwi-btn">Wokwi</a>
+                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
+                        <a href="https://wokwi.com/projects/411239222831525889" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
 
                 <div class="project-item">
                     <span class="project-title">Buzzerwire Game Project</span>
                     <div class="link-group">
-                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
                         <a href="https://wokwi.com/projects/411061259688619009" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
                 <div class="project-item">
                     <span class="project-title">Automatic Road Lamp Project</span>
                     <div class="link-group">
-                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
                         <a href="https://wokwi.com/projects/410686824811440129" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                <div class="project-item">
                     <span class="project-title">Smart Parking System Project</span>
                     <div class="link-group">
-                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
                         <a href="https://wokwi.com/projects/409335669136293889" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                 <div class="project-item">
                     <span class="project-title">Midterm Test Project</span>
                     <div class="link-group">
-                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
                         <a href="https://wokwi.com/projects/408790773279297537" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                 <div class="project-item">
                     <span class="project-title">PAPI Light Project</span>
                     <div class="link-group">
-                        <a href="data/not_found.html" target="_blank" class="btn github-btn">GitHub</a>
+                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
                         <a href="https://wokwi.com/projects/408613596097015809" target="_blank" class="btn wokwi-btn">Wokwi</a>
                     </div>
                 </div>
