--- a/data/not_found.html
+++ b/data/not_found.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error 404 - Halaman Tidak Ditemukan</title>
+    <title>Page's Not Found</title>
     <style>
         /* Reset styling */
         * {
@@ -63,7 +63,7 @@
 <body>
     <div class="container">
         <h1>Error 404</h1>
-        <p>Halaman yang Anda cari tidak ditemukan.</p>
+        <p>Oops.. the web/link isn't available yet :(</p>
         <a href="https://araw10.github.io/About-Me/" class="btn">Kembali ke Beranda</a>
     </div>
 </body>
