--- a/data/not_found.html
+++ b/data/not_found.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page's Not Found</title>
+    <title>Missing Page</title>
     <style>
         /* Reset styling */
         * {
@@ -63,8 +63,8 @@
 <body>
     <div class="container">
         <h1>Error 404</h1>
-        <p>Oops.. the web/link isn't available yet :(</p>
-        <a href="https://araw10.github.io/About-Me/" class="btn">Kembali ke Beranda</a>
+        <p>Seems like the website isn't commited yet...</p>
+        <a href="https://araw10.github.io/About-Me/" class="btn">Go Back to Home</a>
     </div>
 </body>
 </html>
