--- a/data/not_found.html
+++ b/data/not_found.html
@@ -64,7 +64,7 @@
     <div class="container">
         <h1>Error 404</h1>
         <p>Seems like the website isn't commited yet...</p>
-        <a href="https://araw10.github.io/About-Me/" class="btn">Go Back to Home</a>
+        <a href="https://araw10.github.io/Project-List/" class="btn">Go Back to Home</a>
     </div>
 </body>
 </html>
