--- a/index.html
+++ b/index.html
@@ -12,68 +12,62 @@
             <img src="data/profile.jpg" alt="Foto Profil" class="profile-img">
             <h1>ARaW</h1>
             <p class="description">
-                This is my several project that i've uploaded into Github and Wokwi
+                This is my several project that I've uploaded into Github and Wokwi
             </p>
 
-            <div class="scroll-list">
-                <!-- Tambahkan 10 proyek -->
-                <div class="project-item">
-                    <span class="project-title">Temp & Humi Project</span>
-                    <div class="link-group">
-                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/411239222831525889" target="_blank" class="btn wokwi-btn">Wokwi</a>
+            <!-- Gradient wrapper around the scrollable list -->
+            <div class="scroll-wrapper">
+                <div class="scroll-list">
+                    <div class="project-item">
+                        <span class="project-title">Temp & Humi Project</span>
+                        <div class="link-group">
+                            <a href="data/not_found.html" class="btn github-btn">GitHub</a>
+                            <a href="https://wokwi.com/projects/411239222831525889" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <span class="project-title">Buzzerwire Game Project</span>
+                        <div class="link-group">
+                            <a href="data/not_found.html" class="btn github-btn">GitHub</a>
+                            <a href="https://wokwi.com/projects/411061259688619009" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <span class="project-title">Automatic Road Lamp Project</span>
+                        <div class="link-group">
+                            <a href="data/not_found.html" class="btn github-btn">GitHub</a>
+                            <a href="https://wokwi.com/projects/410686824811440129" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <span class="project-title">True/False Logic Project</span>
+                        <div class="link-group">
+                            <a href="https://github.com/ARaW10/True-False_Logic" target="_blank" class="btn github-btn">GitHub</a>
+                            <a href="https://wokwi.com/projects/409819772556044289" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <span class="project-title">Smart Parking System Project</span>
+                        <div class="link-group">
+                            <a href="data/not_found.html" class="btn github-btn">GitHub</a>
+                            <a href="https://wokwi.com/projects/409335669136293889" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <span class="project-title">Midterm Test Project</span>
+                        <div class="link-group">
+                            <a href="data/not_found.html" class="btn github-btn">GitHub</a>
+                            <a href="https://wokwi.com/projects/408790773279297537" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <span class="project-title">PAPI Light Project</span>
+                        <div class="link-group">
+                            <a href="data/not_found.html" class="btn github-btn">GitHub</a>
+                            <a href="https://wokwi.com/projects/408613596097015809" target="_blank" class="btn wokwi-btn">Wokwi</a>
+                        </div>
                     </div>
                 </div>
-
-                <div class="project-item">
-                    <span class="project-title">Buzzerwire Game Project</span>
-                    <div class="link-group">
-                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/411061259688619009" target="_blank" class="btn wokwi-btn">Wokwi</a>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <span class="project-title">Automatic Road Lamp Project</span>
-                    <div class="link-group">
-                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/410686824811440129" target="_blank" class="btn wokwi-btn">Wokwi</a>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <span class="project-title">True/False Logic Project</span>
-                    <div class="link-group">
-                        <a href="https://github.com/ARaW10/True-False_Logic" target="_blank" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/409819772556044289" target="_blank" class="btn wokwi-btn">Wokwi</a>
-                    </div>
-                </div>
-
-               <div class="project-item">
-                    <span class="project-title">Smart Parking System Project</span>
-                    <div class="link-group">
-                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/409335669136293889" target="_blank" class="btn wokwi-btn">Wokwi</a>
-                    </div>
-                </div>
-                
-                <div class="project-item">
-                    <span class="project-title">Midterm Test Project</span>
-                    <div class="link-group">
-                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/408790773279297537" target="_blank" class="btn wokwi-btn">Wokwi</a>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <span class="project-title">PAPI Light Project</span>
-                    <div class="link-group">
-                        <a href="data/not_found.html" class="btn github-btn">GitHub</a>
-                        <a href="https://wokwi.com/projects/408613596097015809" target="_blank" class="btn wokwi-btn">Wokwi</a>
-                    </div>
-                </div>
-
-                <!-- Tambahkan proyek lainnya sesuai kebutuhan -->
             </div>
         </div>
     </div>
